syntax = "proto3";

package com.itrjp.im.proto;
option java_multiple_files = true;
import 'message.proto';

// 数据包
message Packet{
  DataType dataType = 1; // 数据类型
  int64  timestamp = 2;// 时间戳
  com.itrjp.im.message.Message message = 3; // 消息体
  Event event = 4; // 事件通知
}
enum DataType{
  // 普通消息
  MESSAGE = 0;
  // 通知消息(上下线)
  NOTION = 1;
}
message Data{
  string channelId = 1;
  string content = 2;
  string messageId = 3;
  int64  timestamp = 4;// 时间戳

}

// 通知事件类型
enum EventType{
  ONLINE = 0;
  OFFLINE = 1;
  JOIN = 2;
  LEAVE = 3;
  MUTE = 4;
  UN_MUTE = 5;
  KICK = 6;
}

// 时间通知
message Event{
  string channelId = 1;
  string userId = 2;
  EventType type = 3; // 事件类型
  int64  timestamp = 4;// 时间戳
}

message MessageDTO{
  string channelId = 1;
  string content = 2;
  string messageId = 3;
  int64  timestamp = 4;// 时间戳
}